# axisminer

./: .bumpversion.cfg  .clang-tidy  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  README.md  appveyor.yml  build_cuda.bat  build_opencl.bat  circle.yml
axisminer/: CMakeLists.txt  axisminer.rc  main.cpp
docs/: API_DOCUMENTATION.md  BUILD.md  POOL_EXAMPLES_ETH.md
libapicore/: ApiServer.cpp  CMakeLists.txt
libdevcore/: Common.h  CommonData.cpp  CommonData.h  Exceptions.h  FixedHash.cpp  FixedHash.h  Guards.h  Log.cpp  Log.h  Worker.cpp  Worker.h
libethash-cl/: ethash_miner_kernel.h  progpow_miner_kernel.h
libethash-cpu/: CPUMiner.cpp  CPUMiner.h
libethash-cuda/: CUDAMiner.cpp  CUDAMiner.h  cuda_helper.h  ethash_miner_kernel.cu  ethash_miner_kernel.h  progpow_miner_kernel.h
libethcore/: EthashAux.cpp  EthashAux.h  Farm.cpp  Farm.h  Miner.cpp  Miner.h
libhwmon/: wrapnvml.cpp
libpoolprotocols/: CMakeLists.txt  PoolURI.cpp  PoolURI.h
libpoolprotocols/getwork/: EthGetworkClient.cpp
libpoolprotocols/stratum/: EthStratumClient.cpp
scripts/: testpools.bash
